Fixed stack overflow regressions

--- a/src/css/stackoverflow.css
+++ b/src/css/stackoverflow.css
@@ -41,6 +41,10 @@
   transform: translate(0, 0.2rem);
 }
 
+.listResults .-job #glassdoor-link {
+  z-index: 1;
+}
+
 /* /jobs/companies */
 
 .company-list .-company .logowrapper {
